# lambda-knowledge-rag

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.md  requirements.txt  tox.ini
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: DEPLOYMENT.md  DESIGN.md
infra/docker/package_deploy/: Dockerfile
infra/docker/tests/: Dockerfile
infra/lambda/: sync_handler.py
infra/terraform/: README.md  bedrock.tf  main.tf  outputs.tf  providers.tf  s3_trigger.tf  terraform.tf  terraform.tfvars  terraform.tfvars.example  variables.tf
infra/terraform/modules/lambda/: main.tf  (+2 more)
scripts/: build-lambda.sh  deploy.sh
src/: index.py  requirements-dev.txt  requirements.txt
src/application/ports/: rag_port.py
src/application/usecases/: ingest_scrapbox.py  search_knowledge.py
src/core/: clients.py  config.py  converter.py  retriever.py
src/core/clients/: __init__.py  embeddings.py  knowledge.py  pinecone.py  s3.py  scrapbox.py
src/core/processors/: etl.py
src/domain/entities/: document.py  scrapbox_page.py
src/domain/policies/: search_policy.py
src/domain/values/: query.py
src/handlers/: scrapbox_etl.py
src/infrastructure/adapters/: __init__.py  bedrock_kb_adapter.py  etl.py  s3.py  scrapbox.py
src/infrastructure/config/: config.py
src/infrastructure/lambda/: index.py
src/schema/: __init__.py  api.py  config.py  document.py  scrapbox.py  vector.py
src/shared/: utils.py
tests/: conftest.py
tests/unit/: test_etl.py  test_retriever.py  test_scrapbox_client.py  test_scrapbox_converter.py  test_signature_valification.py
(+9 files in other folders)
